<resources>
    <string name="app_name">My Application</string>
    <string name="_0_clicks">0_ Clicks</string>
    <string name="click">Click</string>
    <string name="_0clicks">0 clicks</string>
    <string name="фыв">х</string>
    <string name="впыпва">у</string>
    <string name="цукпу">й</string>
    <string name="выапуук">п</string>
    <string name="пуцкпа">о</string>
    <string name="цуавыц">п</string>
    <string name="сво">а</string>
    <string name="сывац">и</string>
    <string name="йуквыа">х</string>
    <string name="hello_android">Hello Android!</string>
    <string name="button1">й</string>
    <string name="button2">х</string>
    <string name="button3">у</string>
    <string name="button4">ххихихихихихихихихихихихихи</string>
    <string name="button5">^</string>
    <string name="button6">_</string>
    <string name="button7">^</string>
    <string name="clicks">0 Clicks</string>
    <string name="framelayout">Hello Android!</string>
    <string name="хихи">твое имя в мире кекшик импакта</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus eleifend sit amet orci non malesuada. Praesent justo augue, ullamcorper at erat sed, rutrum dignissim ligula. Donec aliquet, turpis at sollicitudin tristique, nibh eros mollis lacus, id rutrum augue massa eu tortor. Curabitur lacus lorem, cursus in scelerisque nec, luctus quis lacus. Nullam rutrum eget felis id posuere. Curabitur semper eu ex in ullamcorper. Suspendisse porttitor nulla in egestas bibendum. Vestibulum vitae lorem vulputate, eleifend dolor in, tincidunt dui. Praesent quis luctus erat. Vestibulum id imperdiet dui. Nullam at turpis odio. Aliquam malesuada mattis tortor, ut convallis risus vestibulum ac. Integer aliquet velit ac dui pretium, eu pharetra libero elementum. Vivamus mattis vulputate pulvinar. Proin at sollicitudin felis. Praesent et dapibus odio. Nullam vestibulum, risus eget convallis aliquet, dolor quam molestie lacus, id tincidunt sem ante vel quam. Maecenas tincidunt dignissim rutrum. Proin magna eros, tempus quis venenatis ac, egestas eu libero. Suspendisse tempus venenatis accumsan. Etiam euismod, tortor id egestas rhoncus, tortor eros venenatis velit, pellentesque iaculis est libero in felis. Donec sed dignissim metus. Sed maximus at lorem ac consequat. Praesent vestibulum, neque a iaculis maximus, ante orci eleifend eros, id malesuada tortor arcu eget massa. Maecenas felis sapien, porta sit amet diam nec, fermentum sollicitudin nisi. Quisque vestibulum mi vel risus eleifend tristique. Duis tincidunt libero sed eros dictum semper ut vitae dolor. Proin egestas elit eu nisi cursus, in viverra urna bibendum. Proin tincidunt in lectus ac viverra. In nec ullamcorper est. Aenean ultricies blandit risus vel congue. Sed fermentum vehicula odio. Nulla non felis in nisi gravida blandit in et nisl. Duis imperdiet, lacus ac tincidunt posuere, velit nisi scelerisque ex, eget commodo risus ante a lorem. Nam dolor magna, consequat vel sagittis et, suscipit at arcu. Maecenas dolor ipsum, facilisis vitae est ornare, viverra tincidunt ante. Suspendisse suscipit molestie ante, lobortis volutpat est molestie a. Morbi sed lacus laoreet, congue libero at, eleifend eros. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam mollis pellentesque tempor. Fusce mollis hendrerit magna. Fusce imperdiet nulla id quam feugiat, vitae tristique tortor volutpat. Integer volutpat luctus erat vel rutrum. Maecenas vel sodales ipsum, a sagittis leo. Mauris lobortis dui quis auctor rhoncus. Curabitur mauris magna, accumsan hendrerit mauris a, porta accumsan ante. Integer eu velit ante. Suspendisse pellentesque justo vitae malesuada consectetur. Maecenas orci massa, pulvinar ac elit a, mattis posuere mauris. Duis ut lorem libero. Morbi condimentum feugiat enim. Morbi magna diam, pharetra convallis tempor sit amet, tempor nec odio. Mauris massa dui, venenatis sed sem vitae, interdum elementum ligula. Nunc accumsan magna ac tellus imperdiet, a placerat mi feugiat. Curabitur ut purus ante. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Curabitur et ligula purus.</string>
    <string name="head">твое имя в мире анимее</string>
    <string name="ывапва">TODO</string>
</resources>